feat: 测试打包安卓

--- a/.github/workflows/eas-build.yml
+++ b/.github/workflows/eas-build.yml
@@ -22,4 +22,5 @@ jobs:
       - name: Install dependencies
         run: yarn
       - name: Build on EAS
-        run: eas build --platform all --non-interactive
+        # run: eas build --platform all --non-interactive
+        run: eas build --profile production --platform android
