--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "upgrade:tamagui": "$npm_execpath up '*tamagui*' '@tamagui/*'"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@tamagui/animations-react-native": "^1.49.10",
     "@tamagui/babel-plugin": "^1.49.10",
     "@tamagui/config": "^1.49.10",
     "@tamagui/font-inter": "^1.49.10",
     "@tamagui/lucide-icons": "^1.49.10",
     "@tamagui/themes": "^1.49.10",
+    "axios": "^1.5.0",
     "expo": "49.0.6",
     "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.8",
@@ -30,10 +32,14 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-keychain": "^8.1.2",
+    "react-native-mmkv": "^2.10.2",
     "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
+    "react-native-webview": "13.2.2",
+    "react-redux": "^8.1.2",
     "tamagui": "^1.49.10"
   },
   "devDependencies": {
